updated checkSolution actions in UserButtonsContainer. If function gets stuck in recursive loop, performs a request to the server for updated solution. Tested browser impact with infinite loop to ensure browser performance is not impacted, user can still interact with game while in loop. Technically should not come up, because it takes literally milliseconds, but good to test edge case.

--- a/client/src/styles/sudoku.css
+++ b/client/src/styles/sudoku.css
@@ -46,7 +46,7 @@ body {
 .span-value{
   position: relative;
   transform: scale(0);
-  transition: 0.1s ease-in;
+  transition: 0.2s ease-in;
 }
 
 .span-value.show{
